fix: disable text scaling for landscape on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -75,6 +75,7 @@
   vertical-align: baseline;
   background-color: transparent;
   box-sizing: border-box;
+  text-size-adjust: none;
 }
 
 /* General */
